<resources>
    <string name="app_name">Student Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with_google">Login with Google</string>
    <string name="student_management_system">STUDENT MANAGEMENT SYSTEM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="manager">MANAGER</string>
    <string name="employee">EMPLOYEE</string>
    <string name="for_manager">For Manager</string>
    <string name="add_new_student_information">New Student Information</string>
    <string name="student_information_list">Student Information List</string>
    <string name="new_certificate">New Certificate Information</string>
    <string name="certificate_information_list">Certificate Information List</string>
    <string name="import_student_information">Import Student Information</string>
    <string name="export_student_information">Export Student Information</string>
    <string name="import_certificate_information">Import Certificate Information</string>
    <string name="export_certificate_information">Export Certificate Information</string>
    <string name="your_name">Your name</string>
    <string name="contact_email">contact@gmail.com</string>
    <string name="new_student_information">NEW STUDENT INFORMATION</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="hi_admin">Welcome back, Admin!</string>
    <string name="new_user_information">NEW USER INFORMATION</string>
    <string name="user_information_list">User Information List</string>
    <string name="name_user">Nguyễn Văn A</string>
    <string name="role">Role</string>
    <string name="status">Status</string>
    <string name="update_information">Update Information</string>
    <string name="delete_user">Delete User</string>
    <string name="lock_user">Lock User</string>
    <string name="view_history_login">View History Login</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="add_user">ADD USER</string>
    <string name="logout">LOGOUT</string>
    <string name="student_id">Student ID</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="change_profile_picture">CHANGE PROFILE PICTURE</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_your_picture">Choose your picture</string>
    <string name="remove_current_avatar">Remove current avatar</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_your_password">CHANGE YOUR PASSWORD</string>
    <string name="update_user_information">UPDATE USER INFORMATION</string>
    <string name="active">Active</string>
    <string name="update_user">UPDATE USER</string>
    <string name="delete_user_information">DELETE USER INFORMATION</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="lock_unlock">Toggle Status</string>
    <string name="history_login_of_user">HISTORY LOGIN OF USER</string>
    <string name="date">date</string>
    <string name="certificate_id">Certificate ID</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="certificate_description">Certificate Description</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="add_certificate">ADD CERTIFICATE</string>
    <string name="certificate">Certificate</string>
    <string name="list_of_students">LIST OF STUDENTS</string>
    <string name="list_of_certificate">LIST OF CERTIFICATE</string>
    <string name="new_certificate_information">NEW CERTIFICATE INFORMATION</string>
    <string name="major">Major</string>
    <string name="id">ID</string>
    <string name="delete_student">Delete Student</string>
    <string name="update_student_information">UPDATE STUDENT INFORMATION</string>
    <string name="id_certificate">ID Certificate</string>
    <string name="date_created">Date Created</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="update_certificate">Update Certificate</string>
    <string name="delete_certificate">Delete Certificate</string>
    <string name="student_information">STUDENT INFORMATION</string>
    <string name="new_cancel">CANCEL</string>
    <string name="new_certificate_of_student">NEW CERTIFICATE OF STUDENT</string>
    <string name="add_certificate_of_student">ADD</string>
    <string name="user_id">User ID</string>
    <string name="update_certificate_information">UPDATE CERTIFICATE INFORMATION</string>
    <string name="update_certificate_new">UPDATE CERTIFICATE</string>
    <string name="certificate_date_created">Certificate Date Created</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Students</string>
    <string name="action_sort">sort</string>
    <string name="sort_a_to_z">Sort A to Z</string>
    <string name="sort_z_to_a">Sort Z to A</string>
    <string name="date_create_user">Date Created</string>
    <string name="update_student">Update Student</string>
</resources>