<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:layout_marginHorizontal="@dimen/_10dp">

    <TextView
        android:id="@+id/tvNewUserInformation"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_information"
        android:textColor="@color/FlatWhite"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="20dp"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNewUserInformation"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAge"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/age"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etRole"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/role"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAddUser" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="50dp"
        android:id="@+id/btnAddUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/transparent"
        android:drawableLeft="@drawable/baseline_orange_playlist_add"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_10dp"
        android:text="@string/add_user"
        android:textColor="#FFBC8B"
        android:textSize="15sp"
        app:cornerRadius="5dp"
        app:strokeColor="#FFBC8B"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/etRole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
