<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_update_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_marginHorizontal="@dimen/_20dp">

    <TextView
        android:id="@+id/tvUpdateStudentInformation"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_student_information"
        android:textColor="@color/FlatWhite"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginHorizontal="2dp"
        android:background="@color/FlatWhite"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateStudentInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="20dp"
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/student_id"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="20dp"
        android:id="@+id/etNameStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etNameStudent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/gender"
            android:textColor="@color/FlatWhite"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_15sp"/>

    <LinearLayout
        android:id="@+id/llGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvGender"
        android:orientation="horizontal">
        <CheckBox
            android:textColor="@color/FlatWhite"
            android:id="@+id/checkBoxMale"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:buttonTint="@color/white"
            android:background="@drawable/button_border_white_flat_no_yellow"
            android:text="Male" />


        <CheckBox
            android:textColor="@color/FlatWhite"
            android:id="@+id/checkBoxFemale"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:layout_weight="2"
            android:background="@drawable/button_border_white_flat_no_yellow"
            android:text="Female" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/birthday"
        android:inputType="date"
        android:textColor="@color/FlatWhite"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGender" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmailStudent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtBirthday"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhoneStudent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEmailStudent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etMajor"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneStudent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/major"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtAddress" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtAddress"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etMajor"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/address"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtDateCreatedStudentInformation"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtAddress"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/date_created"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:id="@+id/btnUpdateStudentInformation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/transparent"
        android:drawableLeft="@drawable/baseline_orange_playlist_add"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_10dp"
        android:text="@string/update_user"
        android:textColor="#FFBC8B"
        android:textSize="15sp"
        app:cornerRadius="5dp"
        app:strokeColor="#FFBC8B"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/edtDateCreatedStudentInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
