<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_update_certificate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:layout_marginHorizontal="@dimen/_10dp">

    <TextView
        android:id="@+id/tvUpdateCertificateInformation"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_certificate_information"
        android:textColor="@color/FlatWhite"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginHorizontal="2dp"
        android:background="@color/FlatWhite"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateCertificateInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="20dp"
        android:id="@+id/edtCertificateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/certificate_id"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="20dp"
        android:id="@+id/edtCertificateNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtCertificateId"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/certificate_name"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtDescriptionCertificate"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtCertificateNameUpdate"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/certificate_description"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtDateCreatedCertificate"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtDescriptionCertificate"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/certificate_date_created"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/FlatWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="50dp"
        android:id="@+id/btnUpdateCertificateNew"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/transparent"
        android:drawableLeft="@drawable/baseline_orange_playlist_add"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_10dp"
        android:text="@string/update_certificate_new"
        android:textColor="#FFBC8B"
        android:textSize="15sp"
        app:cornerRadius="5dp"
        app:strokeColor="#FFBC8B"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/edtDateCreatedCertificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
